--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.innovation.innovation"
+        applicationId "com.innovation.innovationdatabase"
         minSdkVersion 19
         targetSdkVersion 23
         versionCode 1
