--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+            <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
